# langchain-genai-apps

./: .gitignore  README.md
fastapi-app/: README.md  pyproject.toml
fastapi-app/src/: main.py
streamlit-app/: README.md  pyproject.toml  streamlit-blogpost.py  streamlit-chat-doc.py  streamlit-chat.py  streamlit-marketing-email.py  streamlit-recipe.py  streamlit-therapy.py  streamlit.py
