[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Felix Augenstein"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.20"
openai = "^1.65.4"
langchain-openai = "^0.3.7"
langchain-community = "^0.3.19"
langchain-chroma = "^0.2.2"
pypdf = "^5.4.0"
python-multipart = "^0.0.20"
wikipedia = "^1.4.0"
duckduckgo-search = "^2025.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
