[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Felix Augenstein"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.43.0"
requests = "^2.32.3"
langchain = "^0.3.20"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
